fixed navbar-header contents' alignment on mobile

--- a/style.css
+++ b/style.css
@@ -714,15 +714,17 @@ footer h3 {
   }
 
   .navbar-header {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
   }
 
   .mobile-menu {
     display: block;
     cursor: pointer;
+    grid-column-start: 1;
   }
 
   .mobile-login {
@@ -732,6 +734,7 @@ footer h3 {
     color: var(--primary-color);
     font-weight: 700;
     font-weight: 12px;
+    justify-self: self-end;
   }
 
   .navbar-logo {
